@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-09T16:22:50Z",
-  "count_outdated" : 504,
-  "uniques_outdated" : 292,
-  "count" : 531,
+  "timestamp" : "2022-09-10T01:46:50Z",
+  "count_outdated" : 507,
+  "uniques_outdated" : 293,
+  "count" : 534,
   "uniques" : 308,
   "clones" : [
-    {
-      "timestamp": "2022-08-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-27T00:00:00Z",
       "count": 3,
@@ -91,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
