@@ -1,3 +1,11 @@
+2022-09-10T01:46:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3026320090
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 292 504 / 308 531
+* notice: next accum: outdated-unq outdated-all / unq all: 293 507 / 308 534
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-08-26] / [2022-09-09]
+
 2022-09-09T16:22:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3023871037
 * notice: last 14d: unq all: 5 27
